# battleship-cpp

./: README.md
backend/: CMakeLists.txt  build.sh
backend/app/: main.cpp
backend/gameplay/board/: board.cpp  board.h
backend/gameplay/board/include/: board.h
backend/gameplay/board/src/: board.cpp
backend/gameplay/game/include/: game.h  gameMode.h
backend/gameplay/game/src/: game.cpp  gameMode.cpp
backend/gameplay/mechanics/: mechanics.cpp  mechanics.h
backend/gameplay/mechanics/board/: board.cpp  board.h
backend/gameplay/mechanics/board/include/: board.h
backend/gameplay/mechanics/board/src/: board.cpp
backend/gameplay/mechanics/bot/include/: bot.h
backend/gameplay/mechanics/bot/src/: bot.cpp
backend/gameplay/mechanics/game/include/: game.h
backend/gameplay/mechanics/game/src/: game.cpp
backend/gameplay/mechanics/ship/: ship.cpp  ship.h
backend/gameplay/mechanics/ship/include/: ship.h
backend/gameplay/mechanics/ship/src/: ship.cpp
backend/gameplay/mechanics/space/: space.cpp  space.h
backend/gameplay/mechanics/space/include/: space.h
backend/gameplay/mechanics/space/src/: space.cpp
backend/gameplay/ship/: ship.cpp  ship.h
backend/gameplay/ship/include/: ship.h
backend/gameplay/ship/src/: ship.cpp
backend/ui/common/include/: uiTheme.h
backend/ui/ingame/include/: ingame.h  ingameHelper.h  startgame.h
backend/ui/ingame/src/: ingame.cpp  ingameHelper.cpp  startgame.cpp
backend/ui/pregame/: pregame.cpp  pregame.h
backend/ui/pregame/include/: pregame.h  pregameHelper.h  setup.h
backend/ui/pregame/src/: pregame.cpp  pregameHelper.cpp  setup.cpp
